# VIsionAssignment2

./: .gitignore  CMakeLists.txt  Histogram.cpp  Histogram.h  Images.cpp  Images.h  LineDetector.cpp  Makefile  PageDetector.cpp  PointDetector.cpp  PointDetector.h  README.md  TemplateMatcher.cpp  Transformer.cpp  Utils.cpp  Utils.h  images.txt  main.cpp
Headers/: Images.hpp  LineDetector.hpp  PageDetector.hpp  PointDetector.hpp  TemplateMatcher.hpp  Transformer.hpp  Utils.hpp
